# tbm-unicloudconnect

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.codex/: hooks.json
.github/workflows/: ci.yml
GUI Design/: .thumbnail  Dashboard Varianten.dc.html  UniCloudConnect.dc.html
docs/: ACCESS.md  ARCHITECTURE.md  FUTURE_OUTPUT_ADAPTERS.md  MCP_SPEC.md  MVP1_GAP_REPORT.md  MVP1_SCOPE.md  NORDSTERN.md  SETUP_FLOW.md  draft_ARCHITECTURE.md
docs/adr/: 0001-macos-local-first-no-notion.md  0002-notion-output-adapter-mvp2.md
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
src/: index.ts
src/db/: db.ts  repos.ts  schema.ts
src/keychain/: keychain.ts
src/learnweb-core/: client.ts  constants.ts  index.ts  session.ts
src/local-library/: access.ts  index.ts  paths.ts  (+1 more)
tests/: db.test.ts  filesystem-adapter.test.ts  index.test.ts  keychain.test.ts  learnweb-client.test.ts  local-library.test.ts  mcp-runtime.test.ts  mcp.test.ts  migration.test.ts  notion-adapter.test.ts  notion-client.test.ts  notion-push.it.test.ts  notion-setup.test.ts  output-router.test.ts  parsers.test.ts  recording-parser.test.ts  runtime.test.ts  session.test.ts  sync-engine.test.ts  transcription-manager.test.ts  transcription-remove.test.ts
transcription-worker/: CLAUDE.md  README.md  pyproject.toml
transcription-worker/docs/: ACCESS.md
transcription-worker/src/transcription_worker/: __init__.py  main.py
transcription-worker/tests/: test_main.py
(+46 files in other folders)
